Initial French translation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1016 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core.nl1/build.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               epl-v10.html
+               epl-v10.html,\
+               plugin_de.properties,\
+               plugin_it.properties,\
+               plugin_fr.properties
