--- a/net.sourceforge.eclipsetrader.news.nl1/build.properties
+++ b/net.sourceforge.eclipsetrader.news.nl1/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                epl-v10.html,\
                plugin_it.properties,\
-               plugin_de.properties
+               plugin_de.properties,\
+               plugin_fr.properties
