--- a/net.sourceforge.eclipsetrader-feature/build.properties
+++ b/net.sourceforge.eclipsetrader-feature/build.properties
@@ -1,5 +1,6 @@
 bin.includes = feature.xml,\
                epl-v10.html,\
                feature.properties,\
-               eclipse_update_120.jpg
+               eclipse_update_120.jpg,\
+               feature_de.properties
 qualifier = context
