Split Apache Commons plugin into individual bundles
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1219 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.apache.commons/plugin.properties
+++ b/org.apache.commons/plugin.properties
@@ -208,4 +208,4 @@
 pluginName=Apache Commons
 
 # "providerName" property - name of the company that provides the plugin
-providerName=Sourceforge.net
+providerName=EclipseTrader.org
