--- a/org.apache.commons-feature/feature.properties
+++ b/org.apache.commons-feature/feature.properties
@@ -208,7 +208,7 @@
 featureName=Apache Commons
 
 # "providerName" property - name of the company that provides the feature
-providerName=Sourceforge.net
+providerName=EclipseTrader.org
 
 # "description" property - description of the feature
 description=Collection of reusable Java components.
