Borsa Italiana connector plugin refactoring
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1222 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.borsaitalia/build.properties
+++ b/org.eclipsetrader.borsaitalia/build.properties
@@ -3,5 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               epl-v10.html,\
-               plugin.properties
+               borsaitalia16.gif,\
+               borsaitalia32.gif,\
+               icons/,\
+               epl-v10.html
