--- a/org.eclipsetrader.borsaitalia/.project
+++ b/org.eclipsetrader.borsaitalia/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.sourceforge.eclipsetrader.borsaitalia</name>
+	<name>org.eclipsetrader.borsaitalia</name>
 	<comment></comment>
 	<projects>
 	</projects>
