News plugin initial refactoring
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1225 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.news/build.properties
+++ b/org.eclipsetrader.news/build.properties
@@ -1,7 +1,7 @@
+source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
+               .,\
                plugin.xml,\
-               icons/,\
-               plugin.properties,\
-               .
-source.. = src/
+               epl-v10.html,\
+               icons/
