--- a/org.eclipsetrader.news/plugin.xml
+++ b/org.eclipsetrader.news/plugin.xml
@@ -1,216 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?eclipse version="3.0"?>
+<?eclipse version="3.2"?>
 <plugin>
    <extension
-         point="org.eclipse.ui.actionSets">
-      <actionSet
-            id="net.sourceforge.eclipsetrader.news"
-            label="%actionSet.label.news">
-         <menu
-               id="newsMenu"
-               label="%menu.label.news"
-               path="news">
-            <separator name="top"/>
-            <separator name="group1"/>
-            <separator name="group2"/>
-            <separator name="group3"/>
-            <separator name="group4"/>
-            <separator name="group5"/>
-            <separator name="group6"/>
-            <separator name="additions"/>
-            <separator name="bottom"/>
-         </menu>
-         <action
-               class="net.sourceforge.eclipsetrader.news.actions.StopFeedAction"
-               icon="icons/etool16/newspaper_stop.png"
-               id="net.sourceforge.eclipsetrader.news.stopFeed"
-               label="%StopFeedAction.label"
-               style="push"
-               toolbarPath="eclipsetrader"
-               tooltip="%StopFeedAction.tooltip"/>
-         <action
-               class="net.sourceforge.eclipsetrader.news.actions.StartFeedAction"
-               icon="icons/etool16/newspaper_go.png"
-               id="net.sourceforge.eclipsetrader.news.startFeed"
-               label="%StartFeedAction.label"
-               style="push"
-               toolbarPath="eclipsetrader"
-               tooltip="%StartFeedAction.tooltip"/>
-      </actionSet>
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="org.eclipsetrader.news.internal.preferences.NewsPreferencesPage"
+            id="org.eclipsetrader.news"
+            name="News">
+      </page>
+      <page
+            category="org.eclipsetrader.news"
+            class="org.eclipsetrader.news.internal.preferences.RSSPreferencesPage"
+            id="org.eclipsetrader.news.rss"
+            name="RSS News">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.ui.editors">
+      <editor
+            class="org.eclipsetrader.news.internal.ui.NewsViewer"
+            icon="icons/eview16/internal_browser.gif"
+            id="org.eclipsetrader.news.viewer"
+            name="News">
+      </editor>
+   </extension>
+   <extension
+         point="org.eclipse.ui.elementFactories">
+      <factory
+            class="org.eclipsetrader.news.internal.ui.NewsViewerInputFactory"
+            id="org.eclipsetrader.news.viewerInputFactory">
+      </factory>
    </extension>
    <extension
          point="org.eclipse.ui.perspectives">
       <perspective
-            class="net.sourceforge.eclipsetrader.news.Perspective"
+            class="org.eclipsetrader.news.internal.ui.Perspective"
             icon="icons/eview16/newspaper.png"
-            id="net.sourceforge.eclipsetrader.news"
-            name="%Perspective.News"/>
-   </extension>
-   <extension
-         point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension targetID="net.sourceforge.eclipsetrader.news">
-         <view
-               id="net.sourceforge.eclipsetrader.views.securities"
-               relationship="stack"
-               relative="left"/>
-         <view
-               id="net.sourceforge.eclipsetrader.newslist"
-               relationship="stack"
-               relative="bottom"
-               />
-         <view
-               id="net.sourceforge.eclipsetrader.webbrowser:net.sourceforge.eclipsetrader.news"
-               relationship="stack"
-               relative="center"
-               />
-         <viewShortcut id="net.sourceforge.eclipsetrader.securities"/>
-         <viewShortcut id="net.sourceforge.eclipsetrader.newslist"/>
-         <actionSet id="net.sourceforge.eclipsetrader.news"/>
-         <actionSet id="net.sourceforge.eclipsetrader.securities"/>
-      </perspectiveExtension>
-      <perspectiveExtension targetID="net.sourceforge.eclipsetrader">
-         <perspectiveShortcut id="net.sourceforge.eclipsetrader.news"/>
-         <viewShortcut id="net.sourceforge.eclipsetrader.newslist"/>
-         <viewShortcut id="net.sourceforge.eclipsetrader.newsbrowser"/>
-         <view
-               id="net.sourceforge.eclipsetrader.newslist"
-               relationship="stack"
-               relative="bottom"
-               />
-         <view
-               id="net.sourceforge.eclipsetrader.webbrowser:net.sourceforge.eclipsetrader.news"
-               relationship="stack"
-               relative="center"
-               visible="false"/>
-      </perspectiveExtension>
-   </extension>
-   <extension
-         point="org.eclipse.ui.popupMenus">
-      <viewerContribution
-            id="watchlistView"
-            targetID="net.sourceforge.eclipsetrader.watchlist">
-         <action
-               class="net.sourceforge.eclipsetrader.news.actions.ShowSecurityNewsAction"
-               enablesFor="1"
-               id="net.sourceforge.eclipsetrader.news.showNews"
-               label="%ShowNewsAction.label"
-               menubarPath="additions"
-               style="push"/>
-      </viewerContribution>
-      <viewerContribution
-            id="securitiesView"
-            targetID="net.sourceforge.eclipsetrader.views.securities">
-         <action
-               class="net.sourceforge.eclipsetrader.news.actions.ShowSecurityNewsAction"
-               enablesFor="1"
-               id="net.sourceforge.eclipsetrader.news.showNews"
-               label="%ShowNewsAction.label"
-               menubarPath="additions"
-               style="push"/>
-      </viewerContribution>
-   </extension>
-   <extension
-         point="org.eclipse.ui.preferencePages">
-      <page
-            class="net.sourceforge.eclipsetrader.news.preferences.NewsPreferencesPage"
-            id="net.sourceforge.eclipsetrader.news"
-            name="%PreferencePages.News"/>
-      <page
-            category="net.sourceforge.eclipsetrader.news"
-            class="net.sourceforge.eclipsetrader.news.preferences.RSSPreferencesPage"
-            id="net.sourceforge.eclipsetrader.news.rss"
-            name="%PreferencePages.RSSNews"/>
-   </extension>
-   <extension
-         point="org.eclipse.ui.startup">
-      <startup class="net.sourceforge.eclipsetrader.news.internal.EarlyStartup"/>
-   </extension>
-   <extension
-         point="org.eclipse.ui.themes">
-      <themeElementCategory
-            id="newsList"
-            label="%themeElementCategory.label.newsList"/>
-      <colorDefinition
-            categoryId="newsList"
-            id="NEWS_TABLE_BACKGROUND"
-            label="%colorDefinition.label.newsList.background"
-            value="255,255,224"/>
-      <colorDefinition
-            categoryId="newsList"
-            id="NEWS_TABLE_FOREGROUND"
-            label="%colorDefinition.label.newsList.foreground"
-            value="0,0,0"/>
-      <fontDefinition
-            categoryId="newsList"
-            id="NEWS_TABLE_FONT"
-            label="%fontDefinition.label.newsList.font"/>
-      <themeElementCategory
-            id="newsList.readed"
-            label="%themeElementCategory.label.newsList.read"
-            parentId="newsList"/>
-      <colorDefinition
-            categoryId="newsList.readed"
-            defaultsTo="NEWS_TABLE_BACKGROUND"
-            id="NEWS_READED_ITEM_BACKGROUND"
-            label="%colorDefinition.label.newsList.read.background"/>
-      <colorDefinition
-            categoryId="newsList.readed"
-            id="NEWS_READED_ITEM_FOREGROUND"
-            label="%colorDefinition.label.newsList.read.foreground"
-            value="192,192,192"/>
-      <fontDefinition
-            categoryId="newsList.readed"
-            id="NEWS_READED_ITEM_FONT"
-            label="%fontDefinition.label.newsList.read.font"/>
-      <themeElementCategory
-            id="newsList.new"
-            label="%themeElementCategory.label.newsList.added"
-            parentId="newsList"/>
-      <colorDefinition
-            categoryId="newsList.new"
-            defaultsTo="NEWS_TABLE_BACKGROUND"
-            id="NEWS_NEW_ITEM_BACKGROUND"
-            label="%colorDefinition.label.newsList.added.background"/>
-      <colorDefinition
-            categoryId="newsList.new"
-            defaultsTo="NEWS_TABLE_FOREGROUND"
-            id="NEWS_NEW_ITEM_FOREGROUND"
-            label="%colorDefinition.label.newsList.added.foreground"/>
-      <fontDefinition
-            categoryId="newsList.new"
-            id="NEWS_NEW_ITEM_FONT"
-            label="%fontDefinition.label.newsList.added.font"/>
-   </extension>
-   <extension
-         point="org.eclipse.ui.views">
-      <view
-            allowMultiple="true"
-            category="net.sourceforge.eclipsetrader"
-            class="net.sourceforge.eclipsetrader.news.views.NewsView"
-            icon="icons/eview16/newspaper.png"
-            id="net.sourceforge.eclipsetrader.newslist"
-            name="%Views.News"/>
-   </extension>
-   <extension
-         point="org.eclipse.ui.viewActions">
-      <viewContribution
-            id="securitiesView"
-            targetID="net.sourceforge.eclipsetrader.views.securities">
-         <action
-               class="net.sourceforge.eclipsetrader.news.actions.ShowSecurityNewsAction"
-               enablesFor="1"
-               id="net.sourceforge.eclipsetrader.news.showNews"
-               label="%action.label.showNews"
-               menubarPath="additions"
-               style="push"/>
-      </viewContribution>
-   </extension>
-   <extension
-         point="net.sourceforge.eclipsetrader.core.news">
-      <provider
-            class="net.sourceforge.eclipsetrader.news.providers.RSSNewsProvider"
-            id="net.sourceforge.eclipsetrader.news.rss"
-            name="%NewsProvider.RSS.name"/>
+            id="org.eclipsetrader.news.perspective"
+            name="News">
+      </perspective>
    </extension>
 
 </plugin>
