Porting of Yahoo news feed implementation to new architecture
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1230 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.yahoo/build.properties
+++ b/org.eclipsetrader.yahoo/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                yahoo16.gif,\
                yahoo32.gif,\
                icons/,\
-               plugin.xml
+               plugin.xml,\
+               data/
