--- a/com.tictactec.ta.lib/build.properties
+++ b/com.tictactec.ta.lib/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
-               LICENSE,\
-               .
+               .,\
+               about_files/,\
+               about.html
 source.. = src/
