Add import of intraday data from OpenTick (Refs #35)
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1249 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.opentick/plugin.xml
+++ b/org.eclipsetrader.opentick/plugin.xml
@@ -27,5 +27,18 @@
             name="OpenTick">
       </page>
    </extension>
+   <extension
+         point="org.eclipse.ui.importWizards">
+      <wizard
+            category="org.eclipsetrader.ui.import.data"
+            class="org.eclipsetrader.opentick.internal.ui.DataImportWizard"
+            icon="opentick16.gif"
+            id="org.eclipsetrader.opentick.wizard1"
+            name="OpenTick">
+         <description>
+            Import historical data from OpenTick.
+         </description>
+      </wizard>
+   </extension>
 
 </plugin>
