Charts viewer enhancements (work in progress)
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1251 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.charts.indicators/plugin.xml
+++ b/org.eclipsetrader.ui.charts.indicators/plugin.xml
@@ -9,6 +9,11 @@
             name="Chaikin A/D Line - AD">
       </indicator>
       <indicator
+            class="org.eclipsetrader.ui.charts.indicators.BARS"
+            id="org.eclipsetrader.indicators.bars"
+            name="Bars - BAR">
+      </indicator>
+      <indicator
             class="org.eclipsetrader.ui.charts.indicators.BBANDS"
             id="org.eclipsetrader.indicators.bbands"
             name="Bollinger Bands - BBANDS">
