Updated product build configuration
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1257 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.apache.log4j-feature/feature.properties
+++ b/org.apache.log4j-feature/feature.properties
@@ -208,7 +208,7 @@
 featureName=Apache Log4j
 
 # "providerName" property - name of the company that provides the feature
-providerName=Sourceforge.net
+providerName=EclipseTrader.org
 
 # "description" property - description of the feature
 description=Logging Services for Java.
