--- a/org.eclipsetrader.platform/plugin_customization.ini
+++ b/org.eclipsetrader.platform/plugin_customization.ini
@@ -35,10 +35,15 @@ org.eclipsetrader.ui/EXIT_PROMPT_ON_CLOSE_LAST_WINDOW=true
 # default feed connector
 org.eclipsetrader.core/DEFAULT_CONNECTOR=org.eclipsetrader.yahoo
 
-# Yahoo! Finance connection driver
+# Yahoo! Finance
 org.eclipsetrader.yahoo/DRIVER=org.eclipsetrader.yahoo.internal.core.connector.StreamingConnector
+org.eclipsetrader.yahoo/NEWS_UPDATE_INTERVAL=15
+org.eclipsetrader.yahoo/UPDATE_SECURITIES_NEWS=true
+org.eclipsetrader.yahoo/SUBSCRIBE_US_TOPSTORIES=true
+org.eclipsetrader.yahoo/SUBSCRIBE_US_MARKETS=true
+org.eclipsetrader.yahoo/SUBSCRIBE_US_ECONOMY=true
+org.eclipsetrader.yahoo/SUBSCRIBE_US_INTERNATIONAL=true
 
-# OpenTick connection driver
-org.eclipsetrader.opentick/DRIVER=org.eclipsetrader.opentick.internal.core.FeedConnector
+# OpenTick
 org.eclipsetrader.opentick/SERVER=delayed1.opentick.com
 org.eclipsetrader.opentick/PORT=10015
