--- a/org.eclipsetrader.directa/build.properties
+++ b/org.eclipsetrader.directa/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                icons/,\
                htmlparser.jar,\
-               plugin.xml
+               plugin.xml,\
+               epl-v10.html
